# rayleaf-source

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample_experiment.py  setup.cfg
models/: baseline_constants.py  client.py  client_manager.py  main.py  model.py  sample_experiment.py  server.py
models/metrics/: metrics.ipynb  writer.py
models/synthetic/: log_reg.py
models/utils/: data_utils.py
rayleaf/: __init__.py  main.py  model.py
rayleaf/checkpoints/shakespeare/: stacked_lstm.ckpt
rayleaf/core/: client_cluster.py  client_manager.py
rayleaf/entities/: __init__.py  client.py  constants.py  server.py
rayleaf/femnist/: cnn.py
rayleaf/metrics/: dp_std0.005-metrics_stat.csv  fedavg-metrics_stat.csv  metrics.ipynb  metrics_constants.py  metrics_stat.csv  signavg_slr0.005-metrics_stat.csv  signfedavg-metrics_stat.csv  visualization_utils.py  writer.py
rayleaf/models/: model.py  model_constants.py
rayleaf/models/celeba/: cnn.py
rayleaf/models/femnist/: cnn.py
rayleaf/models/reddit/: stacked_lstm.py
rayleaf/models/sent140/: bag_log_reg.py  stacked_lstm.py
rayleaf/models/shakespeare/: stacked_lstm.py
rayleaf/models/speech_commands/: initialize_data.py  m5.py  utils.py
rayleaf/models/synthetic/: log_reg.py
rayleaf/shakespeare/: stacked_lstm.py
rayleaf/stage/: __init__.py  eval_stage.py  graph_stage.py  setup_stage.py  teardown_stage.py  train_stage.py
rayleaf/stats/: __init__.py  graphing.py
rayleaf/tensorarray/: tensorarray.py  utils.py
rayleaf/utils/: __init__.py  client_count_utils.py  data_utils.py  language_utils.py  logging_utils.py
src/rayleaf/: main.py
src/rayleaf/core/: client_cluster.py
src/rayleaf/entities/: client.py  constants.py  server.py
src/rayleaf/models/: model.py  utils.py
src/rayleaf/models/celeba/: cnn.py
src/rayleaf/models/reddit/: stacked_lstm.py
src/rayleaf/models/shakespeare/: stacked_lstm.py
src/rayleaf/models/speech_commands/: m5.py
src/rayleaf/stage/: __init__.py  setup_stage.py  teardown_stage.py  train_stage.py
src/rayleaf/stats/: __init__.py
src/rayleaf/utils/: data_utils.py
tests/tensorarray/: test_arithmetic.py  test_array.py  test_block_diag.py  test_eq.py  test_len.py  test_modify_tensors.py  test_neq.py  test_np_function.py
