[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = true

[project]
name = "rayleaf"
version = "0.0.12"
authors = [
  { name="Richard Hu", email="r.hu@berkeley.edu" },
]
description = "RayLEAF: a flexible, highly-scalable benchmark for federated learning"
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.10.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.7.4",
    "aiohttp-cors>=0.7.0",
    "matplotlib>=3.5.2",
    "numpy>=1.23.0",
    "opencensus>=0.11.0",
    "pandas>=1.4.3",
    "Pillow>=9.2.0",
    "prometheus_client>=0.14.1",
    "ray[default]>=2.0.0",
    "scipy>=1.9.1",
    "tabulate>=0.8.10",
    "thop>=0.1.1.post2207130030",
    "torch>=1.12.1",
    "torchaudio>=0.12.1",
    "torchvision>=0.13.1",
    "tqdm>=4.64.0"
]

[project.urls]
"Homepage" = "https://github.com/rizhu/rayleaf"
